# apps/web/prompts/web-api-swagger.json
@@ -72,6 +72,14 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "modelName",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "requestBody": {
